--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ flutter:
     - assets/background.png
     - assets/logo.png
     - assets/bg.png
+    - assets/profile.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
