--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   cloud_firestore: ^0.12.9+5
   fluttertoast: ^7.1.6
   shared_preferences: ^0.5.12+4
+  wifi_flutter: ^0.1.0+1
 
 dev_dependencies:
   flutter_test:
