--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,9 @@ dependencies:
   firebase_auth: ^0.14.0+5
   cloud_firestore: ^0.12.9+5
   fluttertoast: ^7.1.6
+  slimy_card: ^1.0.4
+  google_fonts: ^1.0.0
+  flip_card: ^0.4.4
   shared_preferences: ^0.5.12+4
   wifi_flutter: ^0.1.0+1
   wifi_iot:
@@ -59,6 +62,12 @@ flutter:
     - assets/logo.png
     - assets/bg.png
     - assets/profile.jpg
+    - assets/bluetooth.png
+    - assets/masks.png
+    - assets/social.png
+    - assets/distancing.png
+    - assets/total.png
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
