--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,8 @@ flutter:
     - assets/social.png
     - assets/distancing.png
     - assets/total.png
+    - assets/profile.png
+
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
