--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   firebase_core: ^0.4.0+9
   firebase_analytics: ^5.0.2
   firebase_auth: ^0.14.0+5
+  flutter_svg: ^0.19.3
   cloud_firestore: ^0.12.9+5
   fluttertoast: ^7.1.6
   slimy_card: ^1.0.4
@@ -69,7 +70,15 @@ flutter:
     - assets/total.png
     - assets/profile.png
     - assets/covidlogo.png
-
+    - assets/caugh.png
+    - assets/coronadr.svg
+    - assets/fever.png
+    - assets/headache.png
+    - assets/virus.png
+    - assets/wash_hands.png
+    - assets/wear_mask.png
+    - assets/dr.png
+    - assets/admin.png
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
