--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,15 +23,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.0
-  firebase_core: ^0.4.0+9
-  firebase_analytics: ^5.0.2
-  firebase_auth: ^0.14.0+5
+  firebase_auth: ^0.18.3
+  firebase_core : ^0.5.0+1
+  firebase_database: ^4.4.0
   flutter_svg: ^0.19.3
-  cloud_firestore: ^0.12.9+5
   fluttertoast: ^7.1.6
   slimy_card: ^1.0.4
   google_fonts: ^1.0.0
@@ -40,8 +35,11 @@ dependencies:
   wifi_flutter: ^0.1.0+1
   wifi_iot:
     path: ./other/wifi_iot/
-  
-  firebase_database: ^3.1.1
+  flutter_spinkit: "^4.1.2"
+
+  # The following adds the Cupertino Icons font to your application.
+  # Use with the CupertinoIcons class for iOS style icons.
+  cupertino_icons: ^1.0.0
 
 dev_dependencies:
   flutter_test:
