--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   wifi_iot:
     path: ./other/wifi_iot/
   flutter_spinkit: "^4.1.2"
-  get_mac: ^0.0.1
+  wifi_info_plugin: ^1.1.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
