--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
     path: ./other/wifi_iot/
   flutter_spinkit: "^4.1.2"
   wifi_info_plugin: ^1.1.5
+  webview_flutter: ^2.0.2
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
