--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,7 @@ dependencies:
   firebase_auth: ^0.18.3
   firebase_core : ^0.5.0+1
   firebase_database: ^4.4.0
-  flutter_svg: ^0.19.3
+  flutter_svg: ^0.22.0
   fluttertoast: ^7.1.6
   slimy_card: ^1.0.4
   google_fonts: ^1.0.0
@@ -40,6 +40,7 @@ dependencies:
   webview_flutter: ^2.0.2
   provider: ^4.3.1
   dropdown_search: ^0.6.1
+  flutter_launcher_icons: ^0.9.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -49,6 +50,11 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/logo.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -63,6 +69,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - assets/images/
+    - assets/images/vectors/
+    - assets/images/maps/
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
