--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="app.safemove.safemove">
    <application
-        android:label="safemove"
+        android:label="Safe Move"
         android:icon="@mipmap/launcher_icon">
         <activity
             android:name=".MainActivity"
