--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,20 +23,21 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_auth: ^0.18.3
-  firebase_core : ^0.5.0+1
-  firebase_database: ^4.4.0
+  firebase_auth: ^2.0.0
+  firebase_core : ^1.3.0
+  firebase_database: ^7.1.1
   fluttertoast: ^7.1.6
   slimy_card: ^1.0.4
-  google_fonts: ^1.0.0
+  google_fonts: ^2.1.0
   flip_card: ^0.4.4
-  shared_preferences: ^0.5.12+4
+  shared_preferences: ^2.0.6
   wifi_iot: ^0.3.3
   flutter_spinkit: "^4.1.2"
   webview_flutter: ^2.0.2
   provider: ^4.3.1
   dropdown_search: ^0.6.1
   flutter_launcher_icons: ^0.9.0
+  http: ^0.13.3
 
 
   # The following adds the Cupertino Icons font to your application.
